Closed
Bug 1095334
Opened 11 years ago
Closed 11 years ago
The background (blue area) position of selection area is not correct in vertical-(lr/rl) writing mode
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
RESOLVED
FIXED
mozilla37
People
(Reporter: siqinbilige, Assigned: jfkthame)
Details
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:33.0) Gecko/20100101 Firefox/33.0
Build ID: 20141105223254
Steps to reproduce:
select some text in div area in vertical(lr/rl) writing mode.
Actual results:
The background(blue aera) position of selection area is not correct.
Expected results:
It must be set to center of the text line.
| Assignee | ||
Updated•11 years ago
|
Component: Untriaged → Layout: Text
Product: Firefox → Core
| Assignee | ||
Comment 1•11 years ago
|
||
Does this still occur with the latest Nightly build, or is it now fixed?
| Reporter | ||
Comment 2•11 years ago
|
||
This still occur with the latest Nightly build.
| Reporter | ||
Comment 3•11 years ago
|
||
| Reporter | ||
Comment 4•11 years ago
|
||
| Assignee | ||
Comment 5•11 years ago
|
||
The problem here occurs because the 'vhea' table in Windows CJK fonts provides ascent/descent values that correspond to an alphabet baseline, but we align vertical text based on the centered baseline (except when text-orientation is sideways-right).
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 6•11 years ago
|
||
Attachment #8542134 -
Flags: review?(smontagu)
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Summary: The background(blue aera) position of selection area is not correct in vertical(lr/rl) writing mode → The background (blue area) position of selection area is not correct in vertical-(lr/rl) writing mode
Updated•11 years ago
|
Attachment #8542134 -
Flags: review?(smontagu) → review+
| Assignee | ||
Comment 7•11 years ago
|
||
Target Milestone: --- → mozilla37
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•