Bug 1095334 - Adjust ascent/descent to provide centered vertical baseline when reading 'vhea' table. r=smontagu